Revert "(chore) 調整代碼格式，統一引號風格及縮排"
This reverts commit 939571d3207e195a58f8a565138ec3f375cb85a4.
